添加定时任务和目的域名

--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,6 @@
 {
 	"AccessKey": "AK",
 	"AccessKeySecret": "AS",
-	"Domain": "sub.example.com"
+	"Domain": "sub.example.com",
+	"AimDomain": "sub.example.com"
 }
