--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@alicloud/pop-core": "^1.7.9",
     "axios": "^0.20.0",
     "is-docker": "^2.1.1",
+    "node-schedule": "^1.3.2",
     "public-ip": "^4.0.2"
   },
   "repository": {
